--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "13.5.7",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
